--- a/experiments/reference/pipeline_new.config
+++ b/experiments/reference/pipeline_new.config
@@ -128,7 +128,7 @@ model {
   }
 }
 train_config {
-  batch_size: 2
+  batch_size: 8
   data_augmentation_options {
     random_horizontal_flip {
     }
@@ -141,6 +141,16 @@ train_config {
       min_area: 0.75
       max_area: 1.0
       overlap_thresh: 0.0
+    }
+  }
+  data_augmentation_options {
+    random_rgb_to_gray {
+    probability: 0.2
+    }
+  }
+  data_augmentation_options {
+    random_adjust_brightness {
+    max_delta: 0.5
     }
   }
   sync_replicas: true
